- Fixed defect 156 (Teaser: Social Media Links might want to be changed to be in the white space, and not the footer...), - Fixed defect 157 (Teaser-XS: No padding between divider line and social media links.) - Fixed defect 159 (Teaser: No Tinville Icon in website tab) - Fixed defect 161 (Teaser: Click boxes for social media links are too big) - Added dialog box for messages and alerts

--- a/Tinville/static/css/teaser.css
+++ b/Tinville/static/css/teaser.css
@@ -19,7 +19,7 @@ textarea {
 }
 
 body {
-    font-size: 1em;
+    font-size: 1.3em;
     line-height: 1.4;
     font-family: 'Cabin Condensed', sans-serif;
 }
@@ -90,7 +90,7 @@ body {
 
 #tinvilleDescription {
     margin-top: 3%;
-    font-size: 1.5em;
+    font-size: 1.3em;
 }
 
 
@@ -141,6 +141,10 @@ body {
     height: 2em;
     font-size: small;
   }
+}
+
+.socialNetworksRow {
+    margin-bottom: 10px;
 }
 
 
